@@ -1,6 +1,8 @@
 gmp (2:5.1.1+dfsg-2) experimental; urgency=low
 
   * rules: Need to set ABI=x32 at configure time.  Closes: #698000.
+  
+  * Change to source format 3.0 (quilt).
 
  -- Steve M. Robbins <smr@debian.org>  Sun, 17 Mar 2013 21:54:08 -0500
 
